php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #37705 Semaphore constants not available.
Submitted: 2006-06-05 20:08 UTC Modified: 2006-06-05 22:52 UTC
From: aeolianmeson at blitzeclipse dot com Assigned:
Status: Closed Package: Semaphore related
PHP Version: 5.1.4 OS: Fed4
Private report: No CVE-ID: None
 [2006-06-05 20:08 UTC] aeolianmeson at blitzeclipse dot com
Description:
------------
The constants, as mentioned in the documentation (for msg_send() and msg_receive()), are not available. 

Specifically, the EAGAIN constant (which tells you to try resending a message because there was no space left), and the ENOMSG constant (which tells you that there was no message available and blocking was turned off).

The IPC_CREAT constant should be there as well. This isn't mentioned officially in the documentation, but in one of the comments, as well as in bug #25961.

Reproduce code:
---------------
php -r 'print(EAGAIN);'

Expected result:
----------------
An integer.

Actual result:
--------------
PHP Notice:  Use of undefined constant EAGAIN - assumed 'EAGAIN' in Command line code on line 1

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-06-05 22:52 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC