Fixed bug #37705 (Semaphore constants not available).